--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -132,7 +132,7 @@
       <div class="container">
 
         <div class="row justify-content-center">
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/companies/Pro 500k.png" alt="...">
@@ -144,7 +144,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6  align-items-stretch" data-aos="fade-up">
+          <div class="col-md-4  align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/cure.png" alt="...">                
@@ -157,7 +157,7 @@
             </div>
 
           </div>
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/companies/energrow.jpg" alt="...">
@@ -176,7 +176,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex  align-items-stretch" data-aos="fade-up">
+          <div class="col-md-4 d-flex  align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/icon.png" alt="...">
@@ -189,7 +189,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 d-flex  align-items-stretch" data-aos="fade-up">
+          <div class="col-md-4 d-flex  align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/training & expansion program partnership.jpg" alt="...">
@@ -270,7 +270,7 @@
           <h4>Simba Group</h4>
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">About</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Biography</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Patrick Bitature</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Job Openings</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
