--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex justify-cntent-center align-items-center">
-<div class="row">
+  <section id="hero" class="d-flex">
+<div class="row justify-content-right align-items-right">
   <div class="col-6">
 
   </div>
-  <div class="col-lg-6 col-sm-12 text-center">
+  <div class="col-lg-6 col-sm-6 align-items-right ">
 
     <div class="container carousel carousel-fade">
-      <img src="assets/img/PB logo-white.png" class="mx-auto" style="max-width: 200px; border-radius: 10px;" alt="">
+      <img src="assets/img/PB logo-white.png" alt="">
     </div>
     
 
