--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -157,7 +157,7 @@
             </div>
 
           </div>
-          <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
+          <!-- <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
                 <img src="assets/img/companies/energrow.jpg" alt="...">
@@ -172,10 +172,10 @@
                     <li>Offering business in a box, and financial literacy training to customers</li>
                   </ul>
                 </p>
-                <!-- <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div> -->
+                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-4 d-flex  align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
