--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -182,8 +182,7 @@
                 <img src="assets/img/icon.png" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Ibanda Community Organization Network(ICON)</a></h5>
-                <p class="card-text">For more information about the Foundation and to make a donation, please send an email to <a href="mailto:belinda@simbatelecom.com">belinda@simbatelecom.com</a></p>
+                <h5 class="card-title"><a href="#">Ibanda Community Organization Network(ICON)</a></h5>                
                 <!-- <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
@@ -200,6 +199,16 @@
                 <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div>
               </div> -->
             </div>
+          </div>
+
+          <div class="col-md-4 my-auto" data-aos="fade-up">
+            <div class="card">
+              <div class="card-body">
+                <h3 class="card-title"><a href="#">Want To Know More?</a></h3>              
+                <h5 class="card-text">For more information about the Foundation and to make a donation, please send an email to <a href="mailto:belinda@simbatelecom.com">belinda@simbatelecom.com</a></h5>               
+              </div>
+            </div>
+            
           </div>
         </div>
 
