--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -144,6 +144,17 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4 " data-aos="fade-up">
+            <div class="card">
+              <div class="card-img text-center">
+                <img src="assets/img/icon.png" alt="...">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title"><a href="#">Ibanda Community Organization Network(ICON)</a></h5>                
+                <!-- <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div> -->
+              </div>
+            </div>
+          </div>
           <div class="col-md-4  align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img text-center">
@@ -176,17 +187,7 @@
               </div>
             </div>
           </div> -->
-          <div class="col-md-4 d-flex  align-items-stretch" data-aos="fade-up">
-            <div class="card">
-              <div class="card-img text-center">
-                <img src="assets/img/icon.png" alt="...">
-              </div>
-              <div class="card-body">
-                <h5 class="card-title"><a href="#">Ibanda Community Organization Network(ICON)</a></h5>                
-                <!-- <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div> -->
-              </div>
-            </div>
-          </div>
+   
 
           <div class="col-md-4 d-flex  align-items-stretch" data-aos="fade-up">
             <div class="card">
