--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -150,7 +150,8 @@
                 <img src="assets/img/icon.png" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Ibanda Community Organization Network(ICON)</a></h5>                
+                <h5 class="card-title"><a href="#">Ibanda Community Organization Network(ICON)</a></h5>    
+                <p class="card-text">This initiative aims at attaining a self-sustaining community through various Local, Economic and Development Interventions with a view to eradicate poverty and enhance Social-Economic transformation of the Communities.</p>            
                 <!-- <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
@@ -194,14 +195,17 @@
               <div class="card-img text-center">
                 <img src="assets/img/training & expansion program partnership.jpg" alt="...">
               </div>
-              <!-- <div class="card-body">
-                <h5 class="card-title"><a href="#">Training & Expansion Program</a></h5>
-                <p class="card-text">For more information about the Foundation and to make a donation, please send an email to <a href="mailto:belinda@simbatelecom.com">belinda@simbatelecom.com</a></p>
-                <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div>
-              </div> -->
+              <br>
+              <div class="card-body pt-1">
+                <!-- <h5 class="card-title"><a href="#">Training & Expansion Program</a></h5> -->
+                <p class="card-text">In partnership with PSFU and Mastercard Foundation, Protea Marriott Hotel Kampala started an initiative to jumpstart the tourism industry which has been drastically affected by the Covid 19 pandemic. The initiative's focus is to boost those in the catering and local crafts industry, stimulate job creation, empower and support them with the necessary skills.</p>
+                <!-- <div class="read-more"><a href="#"><i class="bi bi-arrow-right"></i> Read More</a></div> -->
+              </div>
             </div>
           </div>
-
+          
+        </div>
+        <div class="row justify-content-center">
           <div class="col-md-4 my-auto" data-aos="fade-up">
             <div class="card">
               <div class="card-body">
