--- a/biography.html
+++ b/biography.html
@@ -36,7 +36,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center header-transparent">
+  <header id="header" class="fixed-top d-flex align-items-center header-scrolled">
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
@@ -70,6 +70,21 @@
   </header><!-- End Header -->
 
   <main id="main">
+    <!-- ======= Blog Section ======= -->
+    <section class="breadcrumbs mb-2">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>My Biography</h2>
+
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>Biography</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- End Blog Section -->
 
     <div class="content">
       <h1>Patrick Bitature</h1>
