--- a/simbagroup.html
+++ b/simbagroup.html
@@ -300,13 +300,13 @@
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Simba Group</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Biography</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Patrick Bitature</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Job Openings</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="https://www.thesimbagroup.com/" target="_blank">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="http://www.thesimbagroup.com/our-story/" target="_blank">About Us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="https://www.thesimbagroup.com/portfolio/electronics/" target="_blank">Patrick Bitature</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="http://www.thesimbagroup.com/job-openings/" target="_blank">Job Openings</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="http://www.thesimbagroup.com/contact-us-2/" target="_blank">Contact</a></li>
           </ul>
-        </div>                    
+        </div>                     
 
       </div>
     </div>
