--- a/blog.html
+++ b/blog.html
@@ -351,8 +351,11 @@
               agriculture, mining and other industries. Join our newsletter to keep up to date.</p>
           </div>
           <div class="col-lg-6">
-            <form action="" method="post">
+            <form action="https://app.99inbound.com/api/e/oIQp9juN" method="POST" target="_blank">
               <input type="email" name="email"><input type="submit" value="Subscribe">
+              <div style="position: absolute; left: -5000px;">
+                <input type="checkbox" name="incredible_lavendar_glossy_frog" value="1" tabindex="-1" autocomplete="no">
+              </div>
             </form>
           </div>
         </div>
