--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown p-2">Build To Last Conversations</h2>
+          <h2 class="animate__animated animate__fadeInDown p-2">Build To Last <br> Conversations</h2>
           <p class="animate__animated animate__fadeInUp">Subscribe to my YouTube channel and get updates on new episodes uploaded every Saturday as we learn, reflect & grow together to build businesses that outlive our lifetime.</p>
           <a href="https://www.youtube.com/watch?v=yMoDx9PgAiM" target="_blank" class="btn-get-started animate__animated animate__fadeInUp">Watch Videos</a>
         </div>
