Ipad and pro responsive

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="col-6">
 
   </div>
-  <div class="col-lg-6 col-sm-6 align-items-right">
+  <div class="col-lg-6 col-md-12 col-sm-12 align-items-right main_hero_content">
 
     <div class="container carousel carousel-fade">
       <img src="assets/img/PB logo-white.png" alt="">
@@ -110,9 +110,9 @@
         </div>
       </div>
 
-      <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
-      </a> -->
+      </a>
 
       <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
