--- a/success.html
+++ b/success.html
@@ -76,25 +76,7 @@
 <!-- ======= Footer ======= -->
 <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-  <div class="footer-newsletter">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h4>Our Newsletter</h4>
-          <p>Simba Group is an East African conglomerate with business interests in telecom, energy, property,
-            agriculture, mining and other industries. Join our newsletter to keep up to date.</p>
-        </div>
-        <div class="col-lg-6">
-          <form action="https://app.99inbound.com/api/e/oIQp9juN" method="POST" target="_blank">
-            <input type="email" name="email"><input type="submit" value="Subscribe">
-            <div style="position: absolute; left: -5000px;">
-              <input type="checkbox" name="incredible_lavendar_glossy_frog" value="1" tabindex="-1" autocomplete="no">
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  
 
   <div class="footer-top">
     <div class="container">
@@ -127,7 +109,7 @@
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="biography.html">Biography</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="pcbfoundation.html">Awards & Causes</a></li>            
+            <li><i class="bx bx-chevron-right"></i> <a href="pcbfoundation.html">Foundation</a></li>            
             <li><i class="bx bx-chevron-right"></i> <a href="blog.html">Blog</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="simbagroup.html">Simba Group</a></li>              
           </ul>
