--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
       <ul>
         <li><a  href="index.html">Home</a></li>
         <li><a href="biography.html">Biography</a></li>
-        <li><a href="pcbfoundation.html">PCB Foundation</a></li>                      
+        <li><a href="pcbfoundation.html">Foundation</a></li>                      
         <li><a class="active " href="blog.html">Blog</a></li> 
         <li><a href="simbagroup.html">Simba Group</a></li>        
       
@@ -393,7 +393,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="biography.html">Biography</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pcbfoundation.html">PCB Foundation</a></li>            
+              <li><i class="bx bx-chevron-right"></i> <a href="pcbfoundation.html">Foundation</a></li>            
               <li><i class="bx bx-chevron-right"></i> <a href="blog.html">Blog</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="simbagroup.html">Simba Group</a></li>              
             </ul>
