--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -105,7 +105,7 @@
 
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
-              <h3 class="title text-center"><a href="">The Patrick and Carol Bitature Foundation</a></h3>
+              <!-- <h3 class="title text-center"><a href="">The Patrick and Carol Bitature Foundation</a></h3> -->
               <h5 class="description">The “Patrick and Carol Bitature Foundation”, 
                 is a non-profit organization, working towards providing adequate 
                 healthcare and opportunities to disadvantaged youth in communities 
