--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <!-- Slide 3 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Causes I Am Passionate About</h2>
+          <h2 class="animate__animated animate__fadeInDown">Causes I Am <br> Passionate About</h2>
           <p class="animate__animated animate__fadeInUp">The Uganda I grew up in and the one I envision future generations living in must be vastly different. For this to happen, we must all play our part. I play mine through Project 500k, Energrow, Corruption walk and Cure Hospital.</p>
           <a href="pcbfoundation.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
