--- a/biography.html
+++ b/biography.html
@@ -212,14 +212,31 @@
         <section class="services">
           <div class="container">
             <div class="row justify-content-center">
-              <div class="col-md-4">
-                  <div class="section-title">
-                      <h2 style="color: #000;">My Awards</h2>      
-                  </div>
+              
+              <div class="section-title">
+                <h2 style="color: #000;">My Awards</h2>      
+            </div>
+
+              <div class="col-lg-6 col-md-12">
+                <ol>
+                  <li>Certificate of Appreciation given for contribution to the development of the Strategy for financial literacy in Uganda.</li>
+                  <li>Social Investment Champion of the year 2020-2021</li>
+                  <li>An outstanding achievement award by Makerere University Business School</li>
+                  <li>International Ernest & young entrepreneur of the year East Africa 2011</li>
+                  <li>Doctorate of Philosophy in Humanities- United Graduate College and Seminary</li>
+                  <li>Business Leader of the future by Price Waterhouse Coopers 2003</li>
+                  <li>Vocational award for outstanding contribution towards Uganda’s economy
+                    2008/2009</li>
+                    <li>Award given for support shown to Orient Bank (2018)</li>
+                    <li>Award given in recognition of outstanding dedication and insight towards the success of NIC.</li>
+                    <li>Award given in recognition of outstanding contribution and leadership as Chairman of the Board of PSFU(2014-2016)</li>
+                    <li>Award for the contribution to the success of the Presidential Investors’ Round Table II, 2007-2009.</li>
+                    <li>Best overall distributor of Nokia in 2005.</li>
+                </ol>
               </div>
           </div>
           
-          <div class="row">
+          <!-- <div class="row">
               <div class="col-md-12">
                   <div class="owl-carousel staff-list">
                       <div class="single-staff-item">
@@ -356,7 +373,9 @@
                       </div>
                   </div>
               </div>
-          </div>
+          </div> -->
+
+
           </div>
         </section>
       </div>
