Looking good to me

--- a/biography.html
+++ b/biography.html
@@ -208,7 +208,7 @@
         
         <div style="padding-bottom:100px;"></div>
       </div>
-      <div id="footer">
+      <div id="footer" class="footer2 mb-2" style="max-width: 50vw;">
         <section class="services">
           <div class="container">
             <div class="row justify-content-center">
@@ -385,7 +385,7 @@
   </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
-<footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+<footer id="footer" class="mt-2">
 
   
 
@@ -396,10 +396,10 @@
         <div class="col-lg-3 col-md-6 footer-info">
           <img src="assets/img/PB logo-white.png" style="width: 250px;" alt="">
           <div class="social-links mt-3">
-            <a href="https://twitter.com/patrickbitature" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="https://www.facebook.com/Patrick-Bitature-174054905964419/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="https://www.youtube.com/channel/UCiw9Vs7hP7JI1Z-rCX3ocBQ" target="_blank" class="instagram"><i class="icofont-youtube"></i></a>
-            <a href="https://ug.linkedin.com/in/patrickbitature" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+           <a href="https://twitter.com/patrickbitature" target="_blank" class="twitter"><i class="icofont-twitter"></i></a>
+              <a href="https://www.facebook.com/Patrick-Bitature-174054905964419/" target="_blank" class="facebook"><i class="icofont-facebook"></i></a>
+              <a href="https://www.youtube.com/channel/UCiw9Vs7hP7JI1Z-rCX3ocBQ" target="_blank" class="instagram"><i class="icofont-youtube"></i></a>
+              <a href="https://ug.linkedin.com/in/patrickbitature" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
           </div>
         </div>
 
