--- a/blog.html
+++ b/blog.html
@@ -437,6 +437,10 @@
 <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
+ <!--slick slide js -->
+ <script src="assets/css/slick/slick.js"></script>
+ <script src="assets/css/slick/slick.min.js"></script>
+
 <!-- Main JS File -->
 <script src="assets/js/main.js"></script>
 
