--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -288,6 +288,10 @@
 <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
+ <!--slick slide js -->
+ <script src="assets/css/slick/slick.js"></script>
+ <script src="assets/css/slick/slick.min.js"></script>
+
 <!-- Main JS File -->
 <script src="assets/js/main.js"></script>
 
