Changes in wording

--- a/biography.html
+++ b/biography.html
@@ -184,23 +184,21 @@
           <div class="right hide">
             <img src="assets/img/PB-photos/pb1.png" class="img-responsive pt-2" alt="" style="border-radius: 20%; max-height: 200px;">
             <h1>Where He Is Now</h1><hr>
-            <p>Patrick Bitature serves as the chairman of the boards of Umeme Uganda Ltd. (the country’s main energy
-              distributor). He also previously served as Chairman of the Board of Directors for Uganda Investment
-              Authority (UIA), and several other organizations.</p>
+            <p>Patrick Bitature is a Ugandan entrepreneur and business thought leader. 
+              He is the Chairman of the Simba Group of Companies which he founded in 1998 
+              with the flagship Simba Telecom. Simba Group is now a conglomerate of East 
+              African companies spanning telecommunications, Hospitality, Real Estate, 
+              Energy, Agriculture, Oil & Gas, and the most recent Healthcare products.
+               He is also the Honorary consul, of the Australian Consulate in Uganda.</p>
   
-            <p>The Bitature family supports initiatives improving health, education, mentorship, and youth empowerment
-              through The Bitature Foundation. The chairman also serves as a patron of Alliance of Mayors & Municipal
-              Leaders on HIV/AIDS in Africa (AMICAALL), CURE Children’s Home Uganda among other goodwill initiatives.
+            <p>Patrick Bitature serves as the chairman board of directors Umeme Uganda Ltd, 
+              the country’s main energy distributor as well as Chairman Uganda Tourism Board 
+              Steering Committee. He also previously served as Chairman of the Board of Directors 
+              for Uganda Investment Authority (UIA), Private Sector Foundation (PSFU), Uganda 
+              Reinsurance, Ndege Premier Aviation Company, Traidlinks Limited and The Presidential Investment Round Table.
             </p>
-            <p>Patrick Bitature has been honored with numerous awards, including the ICSA Presidential Medal for
-              Meritorious Service (2018), Ernst & Young Entrepreneur of the Year – East African (2011), and The Price
-              Water House Coopers East African Business Leaders of the Future (2003).</p>
-  
-            <p>Patrick Bitature was born in Uganda, where he still resides. He is married with four children and
-              prioritizes spending time with family. He is an active participant in church and enjoys educational
-              reading,
-              traveling, motor cross, and attending international conferences.</p>
-              <br>
+            <br>
+            
           </div>
         </div>
     
