--- a/index.html
+++ b/index.html
@@ -286,20 +286,11 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
             
             <p>
-              Patrick Bitature is the Founder and Chairman of Simba Group of Companies, based in Uganda, as well as:
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> The chairman of several Ugandan boards</li>
-              <li><i class="ri-check-double-line"></i> The Honorary Consul for the Australian Consulate in Uganda</li>
-              <li><i class="ri-check-double-line"></i> A devoted philanthropist supporting initiatives in health,
-                education, and mentoring young entrepreneurs.
-              </li>
-            </ul>
-            <p>
-              He studied at the London School of Accountancy and is a fellow of the Institute of Chartered Secretaries
-              and Administrators in the United Kingdom. In 2013, he was awarded an honorary Doctorate by the United
-              Graduate
-              College and Seminary International, based in Asheville, North Carolina.
+              Patrick Bitature is a Ugandan entrepreneur and business thought leader. 
+              He is the Chairman of the Simba Group of Companies which he founded in 1998 with the flagship 
+              Simba Telecom. Simba Group is now a conglomerate of East African companies spanning telecommunications, 
+              Hospitality, Real Estate, Energy, Agriculture, Oil & Gas, and the most recent Healthcare products. 
+              He is also the Honorary consul, of the Australian Consulate in Uganda.
             </p>
             <!-- <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
