--- a/biography.html
+++ b/biography.html
@@ -158,7 +158,7 @@
         </div>
 
         <div class="block">
-          <div class="date left">
+          <div class="right">
             <div class="row">
               <div class="col-md-4">
                 <img src="assets/img/bio/simbagift1.png" class="img img-responsive" style="max-width: 100%;" alt="">
@@ -174,7 +174,7 @@
             </div>             
 
           </div>         
-          <div class="right" style="background: none;">   
+          <div class="left" style="background: none;">   
             <img src="assets/img/bio/presimba2.png" class="img img-responsive" style="max-width: 100%;" alt="">
             
           </div>
