--- a/biography.html
+++ b/biography.html
@@ -185,18 +185,14 @@
             <p class="right">2 April 1998</p>
             <div class="row">
               <div class="col-md-12">
-                <img src="assets/img/bio/simba1.png" class="img img-responsive" style="max-width: 100%;" alt="">
-              </div>
-              <div class="col-md-4">
-
-              </div>
-              <div class="col-md-4">
-                
-              </div>
+            <img src="assets/img/bio/presimba3.png" class="img img-responsive" style="max-width: 100%;" alt="">
+              </div>            
             </div>          
           </div>
           <div class="dot"></div>
           <div class="left hide">
+            <img src="assets/img/bio/simba1.png" class="img img-responsive" style="max-width: 100%;" alt="">
+            <br>
             <img src="assets/img/Patrick-Bitature.jpg" class="img-responsive pt-2" alt="" style="border-radius: 20%; max-height: 200px;">
             <h1>Simba Group</h1><hr>
             <p>Patrick Bitature is the Founder and Chairman of Simba Group of Companies, based in
