--- a/biography.html
+++ b/biography.html
@@ -255,7 +255,9 @@
               Steering Committee. He also previously served as Chairman of the Board of Directors 
               for Uganda Investment Authority (UIA), Private Sector Foundation (PSFU), Uganda 
               Reinsurance, Ndege Premier Aviation Company, Traidlinks Limited and The Presidential Investment Round Table.
-            </p>
+            </p>            
+            <a href="https://www.independent.co.ug/inspired-by-bitature-book-launch-set-for-protea/" target="_blank" style="background: none;color: red; padding: none; display: inline;"><p></p>‘Inspired by Bitature’ book launch set for Protea</p></a>            
+            <a href="https://www.balancingact-africa.com/news/telecoms_en/4683/simba-telecom-starts-money-transfer-service-in-uganda" target="_blank" style="background: none;color: red; padding: none; display: inline;"><p></p>Simba Telecom Starts Money Transfer Service In Uganda</p></a>
             <br>
             
           </div>
