--- a/biography.html
+++ b/biography.html
@@ -103,7 +103,7 @@
           </div>
           <div class="dot"></div>
           <div class="left first">
-            <img src="assets/img/young.jpeg" class="img-responsive pt-2" alt="" style="border-radius: 40%; max-height: 200px;">
+            <!-- <img src="assets/img/young.jpeg" class="img-responsive pt-2" alt="" style="border-radius: 40%; max-height: 200px;"> -->
             <h1>Early life</h1><hr>
             <p>When I was 13 my dad was brutally murdered by the Idi Amin regime. My
               Dad died at the age of 44, just as I began to truly know him and
@@ -194,22 +194,22 @@
             <img src="assets/img/bio/simba1.png" class="img img-responsive" style="max-width: 100%;" alt="">
             <br>
             <img src="assets/img/Patrick-Bitature.jpg" class="img-responsive pt-2" alt="" style="border-radius: 20%; max-height: 200px;">
-            <h1>Simba Group</h1><hr>
-            <p>Patrick Bitature is the Founder and Chairman of Simba Group of Companies, based in
-              Uganda, as well as the
-              chairman of several Ugandan boards, the Honorary Consul for the Australian Consulate in Uganda, and a
-              devoted philanthropist supporting initiatives in health, education, and mentoring young entrepreneurs. He
-              studied at the London School of Accountancy and is a fellow of the Institute of Chartered Secretaries and
-              Administrators in the United Kingdom. In 2013, he was awarded an honorary Doctorate by the United Graduate
-              College and Seminary International, based in Asheville, North Carolina.</p>
+            <h1>The Simba Group Was Founded</h1><hr>
+            <p>This was when the Simba Group began with my flagship business, 
+              Simba Telecom business. Simba Group is now a conglomerate of East 
+              African companies spanning telecommunications, properties, power 
+              generation, agro-business, oil and gas, health and education, tourism, 
+              and social enterprise. All Simba Group companies operate under the Group’s
+               core principles of integrity, innovation, and adaptability, and are overseen 
+               by sound management structures and rigorous boards.</p>
               <br>
-            <p>Founded in 1998 with the flagship Simba Telecom business, Simba Group is now a conglomerate of East
+            <!-- <p>Founded in 1998 with the flagship Simba Telecom business, Simba Group is now a conglomerate of East
               African
               companies spanning telecommunications, properties, power generation, agro-business, oil and gas, health
               and
               education, tourism, and social enterprise. All Simba Group companies operate under the Group’s core
               principles of integrity, innovation, and adaptability, and are overseen by sound management structures and
-              rigorous boards.</p>
+              rigorous boards.</p> -->
               <br>
           </div>
         </div>
@@ -242,19 +242,19 @@
           <div class="dot"></div>
           <div class="right hide">
             <img src="assets/img/PB-photos/pb1.png" class="img-responsive pt-2" alt="" style="border-radius: 20%; max-height: 200px;">
-            <h1>Where He Is Now</h1><hr>
-            <p>Patrick Bitature is a Ugandan entrepreneur and business thought leader. 
-              He is the Chairman of the Simba Group of Companies which he founded in 1998 
-              with the flagship Simba Telecom. Simba Group is now a conglomerate of East 
-              African companies spanning telecommunications, Hospitality, Real Estate, 
-              Energy, Agriculture, Oil & Gas, and the most recent Healthcare products.
-               He is also the Honorary consul, of the Australian Consulate in Uganda.</p>
+            <h1>Where I Am Today</h1><hr>
+            <p>Simba Group is now a conglomerate 
+              of East African companies spanning telecommunications, 
+              Hospitality, Real Estate, Energy, Agriculture, Oil & Gas, 
+              and the most recent Healthcare products. He is also the Honorary 
+              consul, of the Australian Consulate in Uganda.</p>
   
-            <p>Patrick Bitature serves as the chairman board of directors Umeme Uganda Ltd, 
-              the country’s main energy distributor as well as Chairman Uganda Tourism Board 
-              Steering Committee. He also previously served as Chairman of the Board of Directors 
-              for Uganda Investment Authority (UIA), Private Sector Foundation (PSFU), Uganda 
-              Reinsurance, Ndege Premier Aviation Company, Traidlinks Limited and The Presidential Investment Round Table.
+            <p>I serve as the Chairman board of directors Umeme
+               Uganda Ltd, the country’s main energy distributor as well
+                as Chairman Uganda Tourism Board Steering Committee. He also 
+                previously served as Chairman of the Board of Directors for Uganda 
+                Investment Authority (UIA), Private Sector Foundation (PSFU), Uganda 
+                Reinsurance, Ndege Premier Aviation Company, Traidlinks Limited and The Presidential Investment Round Table.
             </p>            
             <a href="https://www.independent.co.ug/inspired-by-bitature-book-launch-set-for-protea/" target="_blank" style="background: none;color: red; padding: none; display: inline;"><p></p>‘Inspired by Bitature’ book launch set for Protea</p></a>            
             <a href="https://www.balancingact-africa.com/news/telecoms_en/4683/simba-telecom-starts-money-transfer-service-in-uganda" target="_blank" style="background: none;color: red; padding: none; display: inline;"><p></p>Simba Telecom Starts Money Transfer Service In Uganda</p></a>
