--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -232,7 +232,7 @@
             Simba Complex <br>
             Acacia Avenue<br>
             Kampala <br><br>
-            <strong>Phone: </strong><a style="text-decoration: none;" href="tel:256 312-351 500">+256 312-351 500</a><br>
+            <strong>Phone: </strong><a style="text-decoration: none;" href="tel:256 312-351 500">+256 781 140186</a><br>
             <strong>Email: </strong><a style="text-decoration: none;" href="mailto:info@thesimbagroup.com">info@thesimbagroup.com</a> <br>
           </p>
 
