--- a/biography.html
+++ b/biography.html
@@ -219,14 +219,14 @@
           </div>
           <div class="right">
             <div class="row">
-              <div class="col-md-4">
+              <!-- <div class="col-md-4">
                 <img src="assets/img/bio/postsimba1.png" class="img img-responsive" style="max-width: 100%;" alt="">
               </div>
               <div class="col-md-4">
                 <img src="assets/img/bio/postsimba2.png" class="img img-responsive" style="max-width: 100%;" alt="">
 
-              </div>
-              <div class="col-md-4">
+              </div> -->
+              <div class="col-md-12">
                 <img src="assets/img/bio/postsimba3.png" class="img img-responsive" style="max-width: 100%;" alt="">
                 
               </div>
