--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
         </div> -->
 
         <div class="row" data-aos="fade-right">
-          <div class="col-md-5">
-            <img src="assets/img/young1.jpeg" style="border-radius: 10px;" class="img-fluid" alt="">
+          <div class="col-md-5 d-flex flex-wrap align-items-center">
+            <img src="assets/img/count-bg.jpg" style="border-radius: 10px;" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
             <div class="section-title">
