--- a/index.html
+++ b/index.html
@@ -91,29 +91,30 @@
       <div id="heroCarousel" class="container carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <div class="carousel-container">
-            <h2 class="animate__animated animate__fadeInDown p-2">Build To Last <br> Conversations</h2>
-            <p class="animate__animated animate__fadeInUp">Subscribe to my YouTube channel and get updates on new episodes uploaded every Saturday as we learn, reflect & grow together to build businesses that outlive our lifetime.</p>
-            <a href="https://www.youtube.com/watch?v=yMoDx9PgAiM" target="_blank" class="btn-get-started animate__animated animate__fadeInUp">Watch Videos</a>
+            <h2 class="animate__animated animate__fadeInDown">My Story</h2>
+            <p class="animate__animated animate__fadeInUp">My name is Patrick Bitature.
+              I am a Ugandan businessman, entrepreneur and philanthropist but the journey to get to where I am and become the man I am today was one full of adversity and challenges. It is a story I share with those willing to listen because the lessons I learnt have proven useful to many youth today. I hope it inspires you as well.</p>
+            <a href="biography.html" class="btn-get-started animate__animated animate__fadeInUp">See Biography</a>
           </div>
-        </div>
+        </div>        
   
         <!-- Slide 2 -->
         <div class="carousel-item">
           <div class="carousel-container">
-            <h2 class="animate__animated animate__fadeInDown">My Story</h2>
-            <p class="animate__animated animate__fadeInUp">My name is Patrick Bitature. My story so far has been one full of ups and downs & wins and losses. It started with something out of my control; when I was 13 years old and My father was brutally murdered by the Idi Amin regime. Where my story stops however is something that is purely up to me.</p>
-            <a href="biography.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+            <h2 class="animate__animated animate__fadeInDown">Causes I Am <br> Passionate About</h2>
+            <p class="animate__animated animate__fadeInUp">Our nation is one full of astonishing potential in terms of ideas as well as resources. Despite this we struggle with so much and until the things that hinder us are dealt with we will be unable to grow. That is why, I founded the Patrick and Carol Bitature Foundation. To give back to the nation that raised me.</p>
+            <a href="pcbfoundation.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
           </div>
         </div>
-  
-        <!-- Slide 3 -->
-        <div class="carousel-item">
+
+         <!-- Slide 3 -->
+         <div class="carousel-item active">
           <div class="carousel-container">
-            <h2 class="animate__animated animate__fadeInDown">Causes I Am <br> Passionate About</h2>
-            <p class="animate__animated animate__fadeInUp">The Uganda I grew up in and the one I envision future generations living in must be vastly different. For this to happen, we must all play our part. I play mine through Project 500k, Energrow, Corruption walk and Cure Hospital.</p>
-            <a href="pcbfoundation.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+            <h2 class="animate__animated animate__fadeInDown p-2">Build To Last <br> Conversations</h2>
+            <p class="animate__animated animate__fadeInUp">Subscribe to my YouTube channel and get updates on new episodes uploaded every Saturday as we learn, reflect & grow together to build businesses that outlive our lifetime.</p>
+            <a href="https://www.youtube.com/watch?v=yMoDx9PgAiM" target="_blank" class="btn-get-started animate__animated animate__fadeInUp">Watch Videos</a>
           </div>
         </div>
   
