--- a/biography.html
+++ b/biography.html
@@ -282,7 +282,7 @@
           <div class="date right"><p class="right">2007</p></div>
           <div class="dot"></div>
           <div class="left hide">
-            <h1>Simba Groups launches Protea Hotel, Kampala</h1><hr> 
+            <h1>Simba Group launches Protea Hotel, Kampala</h1><hr> 
             <img src="assets/img/protea.jpeg" class="img-responsive img pt-2" alt="" style="max-width: 100%;">                              
             <br>
            <p>Protea Hotel Kampala is a four-star hotel located in upmarket Kololo, Kampala district. Protea was opened in November 2007 with a capacity of 71 rooms and large conference facilities. It quickly built loyalty with business travellers and conference businesses.
